--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-spinkit": "^3.0.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
