--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-select": "^5.8.0",
     "react-spinkit": "^3.0.0",
     "styled-components": "^6.1.8",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
